# zmp-opensim

./: .gitignore  README.MD
datasets/: README.MD
datasets/HamnerDelp2013/: README.MD
datasets/Rankin2016/: 1_cleanData.py  2_processData.py  README.MD  osimFunctions.py
datasets/Rankin2016/data/: Ostrich_Run.mot  Ostrich_Run_GRF.mot  Ostrich_Run_GRF_ground.mot  Ostrich_Walk.mot  Ostrich_Walk_GRF.mot  Ostrich_Walk_GRF_ground.mot  Ostrich_Walk_GRF_ground.xml  Ostrich_Walk_coordinates.mot
datasets/SchreiberMoissenet2019/: README.MD
datasets/human-running-treadmill_HamnerDelp2013/: 1_extractData.py  2_processData.py  README.MD  osimFunctions.py
datasets/human-walking-overground_SchreiberMoissenet2019/: 1_extractData.py  2_processData.py  README.MD  anthropometrics.csv
notes/: notes.txt  pre-workshop-meet.txt  workshop.md
pilot/analyzeImplementation/: CMakeLists.txt  README.md  SAMPLE_AnalysisTemplate.xml  osimModel.osim  test.cpp
pilot/analyzeImplementation/plugin/: ZeroMomentPointGRF.cpp  ZeroMomentPointGRF.h
pilot/componentDesign/: README.md  SAMPLE_ComponentTemplate.xml
pilot/cppImplementationZMP/: CMakeLists.txt  README.md  cppImplementationZMP.cpp  subject01_run5_cycle1_mocoSolution.sto
pilot/groundContact/: 2014001_C4_05_grf.xml  2014001_C4_05_trackingModel.osim  README.md  groundContact.py  ikTrackingData.sto
pilot/modelOutputs/: README.md  modelOutputIdeas.py
pilot/pythonImplementationZMP/: README.md  pythonImplementationZMP_cut.py  pythonImplementationZMP_run.py  pythonImplementationZMP_walk.py  setupID.xml
(+1574 files in other folders)
